<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/kirby1"
        android:id="@+id/background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/greeting_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greeting"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/displayInputText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textHere"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/inputText"
        app:layout_constraintTop_toBottomOf="@id/displayInputText"
        app:layout_constraintLeft_toRightOf="@id/putTextBut"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/inputText"
        android:inputType="text"/>
    <androidx.appcompat.widget.AppCompatButton
        android:background="#0000FF"
        android:textColor="#D4F1F4"
        android:id="@+id/putTextBut"
        android:onClick="putText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/displayInputText"
        app:layout_constraintRight_toLeftOf="@id/inputText"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/putText"/>
    <androidx.appcompat.widget.AppCompatButton
        android:background="#0000FF"
        android:textColor="#D4F1F4"
        android:id="@+id/increment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/greeting_textview"
        app:layout_constraintLeft_toRightOf="@id/decrement_button"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/increment"/>
    <androidx.appcompat.widget.AppCompatButton
        android:background="#0000FF"
        android:textColor="#D4F1F4"
        android:id="@+id/decrement_button"
        android:onClick="decrement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/greeting_textview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/increment_button"
        android:text="@string/decrement"/>
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/increment_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/radio_left"
            android:text="@string/radio_label_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/radio_right"
            android:text="@string/radio_label_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>
    <TextView
        android:id="@+id/lifetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/reset"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        android:paddingTop="5dp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="RESET EVERYTHING!"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/lifetime"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/black"
        android:textColor="@color/white"/>


</androidx.constraintlayout.widget.ConstraintLayout>